--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
-  "name": "exposify",
-  "version": "0.4.3",
-  "description": "browserify transform that exposes globals added via a script tag as modules so they can be required.",
+  "name": "externalify",
+  "version": "1.0.0",
+  "description": "Browserify transform that lets you require external modules from any function that follows the require API.",
   "main": "index.js",
-  "scripts": {
-    "test": "tap test/*.js"
-  },
   "repository": {
     "type": "git",
-    "url": "git://github.com/thlorenz/exposify.git"
+    "url": "git://github.com/meteor/externalify.git"
   },
-  "homepage": "https://github.com/thlorenz/exposify",
+  "homepage": "https://github.com/meteor/externalify",
   "dependencies": {
     "globo": "~1.0.0",
     "map-obj": "~1.0.1",
-    "replace-requires": "~1.0.3",
+    "replace-require-functions": "^1.0.0",
     "through2": "~0.4.0",
     "transformify": "~0.1.1"
   },
@@ -26,20 +23,17 @@
     "browserify",
     "browserify-transform",
     "transform",
-    "expose",
     "window",
     "global",
-    "require",
-    "shim"
+    "require"
   ],
   "author": {
-    "name": "Thorsten Lorenz",
-    "email": "thlorenz@gmx.de",
-    "url": "http://thlorenz.com"
+    "name": "Meteor Development Group",
+    "email": "npm@meteor.com"
   },
   "license": {
     "type": "MIT",
-    "url": "https://github.com/thlorenz/exposify/blob/master/LICENSE"
+    "url": "https://github.com/meteor/externalify/blob/master/LICENSE"
   },
   "engine": {
     "node": ">=0.8"
